TODO: Z-Lift-Bug seems to be still present! Avoid Z-Lift: Todo @Conrad -> Has this possibly been fixed by removing halfstepping in 1.37u4?
TODO: Testing, testing ..

V RF.01.38.16.Mod (2018-01-20)
- fixed typo in text
- changed homing functions to use one central home-directions-function
- removed logic to set global homing flag which was not used anymore -> simplifying code

V RF.01.38.16.Mod (2018-01-15)
- fixed some extruder inits
- removed all heat managers except PID because they work for all RFx000.

V RF.01.38.15.Mod (2018-01-15)
- New Startscreen

V RF.01.38.14.Mod (2018-01-15)
- Testing FEATURE_SEE_DISPLAY which can steer the printers button via GCODE and show whats display in the menu.
- improved display cache for output as serial string.

V RF.01.38.13.Mod (2018-01-15)
- Fix Fix Tyreus Lyben was never used but No Overshoot was.

V RF.01.38.12.Mod (2018-01-13)
- read repetier 1.0.1 and synced some code (mostly gcode parsing)
- send better readable log message if Heat Bed Scan fails because of endstop limit Z_ENDSTOP_DRIVE_OVER
- removed while in highest commands loop
- tiny fix for 01.38.11 @ two extruders

V RF.01.38.11.Mod (2018-01-07)
- Testcleanup on stepperdirections
- Cleanup (maybe to discuss) on Do-Step-Functions like startZStep / ...
- standardization of functions to prepare z-direction (prepareBedUp / prepareBedDown vs. setZdirection)
- pinned moveZ to real z direction / pinned performMove to real z direction / pinned directSteps to real z direction -> A test!
- Tweak for zCMP to dismiss steps in Z when zCMP would do otherwise. We just ignore steps in special cases when queue and zCMP are contra-rotating. I have to think about if this is great or to harsh in some situations.
- some standardization on port Writes
- removed minMM[Z_AXIS] because it might be malicious.
- disabled M42 because it might be dangerous somehow and is not really usefull except you really need it and you are not able to edit the firmware