@@ -33,7 +33,6 @@ FSTRINGVALUE(Com::tEcho,"Echo:")
 FSTRINGVALUE(Com::tOkSpace,"ok ")
 FSTRINGVALUE(Com::tWrongChecksum,"Wrong checksum")
 FSTRINGVALUE(Com::tMissingChecksum,"Missing checksum")
-FSTRINGVALUE(Com::tFormatError,"Format error")
 FSTRINGVALUE(Com::tDonePrinting,"Done printing file")
 FSTRINGVALUE(Com::tX," X")
 FSTRINGVALUE(Com::tY," Y")
